# MSCVProject

./: .gitignore  compile_commands.json  script.q
client/web/: package-lock.json  package.json
client/web/src/: styles.sass
client/web/src/app/: app-routing.module.ts  app.module.ts  (+3 more)
compiler/: CMakeCache.txt  MSCVProject  Makefile  cmake_install.cmake  compile_commands.json  includes.h  includes3.h  main
compiler_test/: main.js  main2.js
database/: docker-compose.yml
server/TRTH_BUILDER/: IEXSymbolsList.txt  IEXTRTHSymbolsList.csv  main  main.cc
server/TRTH_COMMITER_TICKER/: main.cc
server/TRTH_IMPORTER/: main  main.cc
server/TRTH_SPLITTER/: CMakeCache.txt  FinalIEXTRTHSymbolsListPart1.csv  FinalIEXTRTHSymbolsListPart2.csv  FinalIEXTRTHSymbolsListPart3.csv  FinalIEXTRTHSymbolsListPart4.csv  FinalIEXTRTHSymbolsListPart5.csv  FinalIEXTRTHSymbolsListPart6.csv  FinalIEXTRTHSymbolsListPart7.csv  Makefile  cmake_install.cmake  compile_commands.json  main
server/TRTH_SPLITTER_COMMITER/: main.cc
server/WATCHLIST_GET/: MSCVProject  includes.h
server/WATCHLIST_GET/cpr/: Makefile  cmake_install.cmake
server/WATCHLIST_POST/: CMakeCache.txt  CMakeLists.txt  MSCVProject  Makefile  cmake_install.cmake  compile_commands.json  includes.h
server/WRDS_IMPORTER/: CMakeCache.txt  MSCVProject  Makefile  compile_commands.json  main  main.cc
server/WRDS_IMPORTER/cpr/: Makefile  cmake_install.cmake
submission/: kubedeploy.yml  kubeservice.yml
submission/ema/: Dockerfile  Makefile  main  main.cc
submission/macd/: main.cc
submission/rsi/: Makefile  main  main.cc
(+54 files in other folders)
